--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <div class="sam-details">
                                         <a class="back" href="#"> < </a>
                                         <a href="#">
-                                            <img class="avatar"src="/avatar.jpg" alt="Samuel Green" aria-hidden="true">
+                                            <img class="avatar"src="avatar.jpg" alt="Samuel Green" aria-hidden="true">
                                         </a>
     
                                         <div class="name-status">
@@ -69,9 +69,9 @@
 
                                 <div class="my-content">
                                     <div class="my-img-chat">
-                                            <img src="/dog-image-1.jpg" alt="Happy Dog">
-                                            <img src="/dog-image-2.jpg" alt="Happy Dog">
-                                            <img src="/dog-image-3.jpg" alt="Happy Dog">
+                                            <img src="dog-image-1.jpg" alt="Happy Dog" aria-hidden="true">
+                                            <img src="dog-image-2.jpg" alt="Happy Dog" aria-hidden="true">
+                                            <img src="dog-image-3.jpg" alt="Happy Dog" aria-hidden="true">
                                         </div>
                                     <div class="my-chat">
                                         <p class="my-chat-2">Here are a few pictures. She's a happy girl!</p>
